# elysiera

./: .gitignore  Cargo.toml  README.md  bundler.toml  debug.ps1  faust2params.py
.github/: FUNDING.yml
.github/workflows/: build.yml
faust/: dsp.dsp
src/: buffer.rs  dsp.rs  lib.rs  params.rs
